Added Login Code

--- a/AvatarBuilder.uproject
+++ b/AvatarBuilder.uproject
@@ -7,8 +7,10 @@
 		{
 			"Name": "AvatarBuilder",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"UMG"
+			]
 		}
-	],
-	"Plugins": []
+	]
 }
