--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,15 +4,15 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/NewWorld.NewWorld
+EditorStartupMap=/Game/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=/Game/Travel.Travel
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/Blueprints/CharGameInstance.CharGameInstance_C
-GameDefaultMap=/Game/MainMenu.MainMenu
-ServerDefaultMap=/Game/MainMenu.MainMenu
+GameDefaultMap=/Game/NewWorld.NewWorld
+ServerDefaultMap=/Game/Test.Test
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
 
