Fix Only One Hand Shake Per Request

--- a/AvatarBuilder.uproject
+++ b/AvatarBuilder.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{61BE1DFF-4311-332F-C60C-D8A9FEDD768D}",
+	"EngineAssociation": "5.0",
 	"Category": "",
 	"Description": "",
 	"Modules": [
